fixed too much space on the footer

--- a/src/footer/footer.scss
+++ b/src/footer/footer.scss
@@ -8,7 +8,9 @@
         font-size: 12px;
         line-height: 18px;
         padding: 10px;
-        margin-top: 5%;
+        margin-bottom: 0;
+        margin: 0;
+        margin-top: 0;
     }
 
 }
