--- a/src/landingpage/styles/join.scss
+++ b/src/landingpage/styles/join.scss
@@ -35,16 +35,9 @@
 
     .join {
         .reg {
-
             .p {
-                margin: 0 10% 20%;
                 width: 35%;
             }
         }
     }
-
-    // .footer {
-    //     display: flex;
-    //     border: solid;
-    // }
 }
